--- a/.github/workflows/CWworkflow.yml
+++ b/.github/workflows/CWworkflow.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs the code in an Apache/PHP web server container
     - name: Startup web server
-      run: docker run -v $(pwd):/var/www/html -dit --rm --name php Zacaz22/PHP-Chess 
+      run: docker run -v $(pwd):/var/www/html -dit --rm --name php zacaz22/php-chess 
 
     # Run OWASP Scan and create Issue of results
     - name: OWASP ZAP Baseline Scan
